<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.nbauma109</groupId>
  <artifactId>jd-gui-duo-parent</artifactId>
  <version>2.0.97-SNAPSHOT</version>
  <packaging>pom</packaging>
  <description>A 2-in-1 JAVA decompiler based on JD-CORE v0 and v1</description>
  <modules>
    <module>api</module>
    <module>services</module>
    <module>app</module>
    <module>assembler</module>
  </modules>
  <scm>
    <connection>scm:git:https://github.com/nbauma109/jd-gui-duo.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/nbauma109/jd-gui-duo.git</developerConnection>
    <url>https://github.com/nbauma109/jd-gui-duo</url>
    <tag>HEAD</tag>
  </scm>
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.1.1</version>
          <configuration>
            <arguments>${arguments}</arguments>
            <goals>install</goals>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <tagNameFormat>@{project.version}</tagNameFormat>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>com.googlecode.maven-download-plugin</groupId>
          <artifactId>download-maven-plugin</artifactId>
          <version>1.13.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.9.0</version>
        </plugin>
        <plugin>
          <groupId>com.akathist.maven.plugins.launch4j</groupId>
          <artifactId>launch4j-maven-plugin</artifactId>
          <version>2.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>3.6.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.formdev</groupId>
        <artifactId>flatlaf</artifactId>
        <version>${flatlaf.version}</version>
      </dependency>
      <dependency>
        <groupId>com.formdev</groupId>
        <artifactId>flatlaf-intellij-themes</artifactId>
        <version>${flatlaf.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.osobolev</groupId>
        <artifactId>swingx-all</artifactId>
        <version>1.7.2</version>
      </dependency>
      <dependency>
        <groupId>org.bidib.org.oxbow</groupId>
        <artifactId>swingbits</artifactId>
        <version>1.3.2</version>
      </dependency>
      <dependency>
        <groupId>com.github.nbauma109</groupId>
        <artifactId>netbeans-visual-diff-standalone</artifactId>
        <version>${netbeans-visual-diff-standalone.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fifesoft</groupId>
        <artifactId>rsyntaxtextarea</artifactId>
        <version>3.6.0</version>
      </dependency>
      <dependency>
        <groupId>com.github.nbauma109</groupId>
        <artifactId>transformer-api</artifactId>
        <version>${transformer-api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jdt</groupId>
        <artifactId>org.eclipse.jdt.core.manipulation</artifactId>
        <version>1.23.100</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jdt</groupId>
        <artifactId>org.eclipse.jdt.core</artifactId>
        <version>3.43.0</version>
      </dependency>
      <dependency>
        <groupId>com.github.freva</groupId>
        <artifactId>ascii-table</artifactId>
        <version>1.8.0</version>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.plantuml</groupId>
        <artifactId>plantuml-mit</artifactId>
        <version>1.2025.10</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>6.0.1</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <main.class>org.jd.gui.App</main.class>
    <project.scm.id>github.com</project.scm.id>
    <flatlaf.version>3.6.2</flatlaf.version>
    <!-- ======================================================================
         Transformer API — Unified Transformer Access Layer
         ======================================================================
         The Transformer API provides convenient access to different
         transformers (currently decompilers only) under a unified API.
         The API is still subject to major changes, but only with a major
         version bump.

         Currently, this API supports the following decompilers:
         • Fernflower
         • Vineflower (fork of Fernflower)
         • Procyon
         • CFR
         • JD-Core V0
         • JD-Core V1
         • JADX
       ====================================================================== -->
    <transformer-api.version>4.0.60</transformer-api.version>
    <!-- ======================================================================
         NetBeans Visual Diff Standalone — Diff Component for Swing
         ======================================================================
         Use the NetBeans diff component in any Java Swing project!
         Supported features include, but not limited to :
         • Java syntax coloring with Eclipse theme.
         • Dark mode with flatlaf
         • Netbeans editor's search
         • Run like a plain-old Java application
         • No need to start NetBeans platform
         • No restriction from NetBeans module system
       ====================================================================== -->
    <netbeans-visual-diff-standalone.version>2.0.46</netbeans-visual-diff-standalone.version>
  </properties>
</project>
